@@ -49,12 +49,9 @@ import time
 import math
 import struct
 
-#The Jetduino should always use SMBus 1 for GEN2_I2C
-rev=3
-if rev == 2 or rev == 3:
-    bus = smbus.SMBus(1)
-else:
-    bus = smbus.SMBus(0)
+#bus = smbus.SMBus(0) #GEN1_I2C
+bus = smbus.SMBus(1) #GEN2_I2C
+#bus = smbus.SMBus(4) #PWR_I2C
 	
 HMC5883L_ADDRESS            =0x1E
 
