@@ -40,7 +40,10 @@ import jetduino
 
 # Connect the Grove Loudness Sensor to analog port A0
 # SIG,NC,VCC,GND
-loudness_sensor = 0
+
+#See Software/Readme.md for more pin details.
+#Sensor connected to A0 Port.  A0 => 54, A11 => 65
+loudness_sensor = 54		# Pin 54 is A0 Port.
 
 while True:
     try:
