@@ -40,12 +40,9 @@ import smbus
 import time
 import grovepi
 
-# use the bus that matches your raspi version
-rev = 3
-if rev == 2 or rev == 3:
-    bus = smbus.SMBus(1)
-else:
-    bus = smbus.SMBus(0)
+#bus = smbus.SMBus(0) #GEN1_I2C
+bus = smbus.SMBus(1) #GEN2_I2C
+#bus = smbus.SMBus(4) #PWR_I2C
 
 # This is the address we setup in the Arduino Program
 address = 0x04
