@@ -4,3 +4,6 @@ v1.1
 	*Exception handling added
 	*Default support for both Rev 1 and Rev 2 added
 	*Strict timing in dependent functions added to increase stability
+    
+01 Feb 2016 David Cofer
+    * Modified files to work with Jetduino
